# NifBlend

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  blender_manifest.toml  conftest.py  mypy.ini  mypy_output.txt  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  newroadmap.md
docs/format/: UPSTREAM_STARFIELD.md
docs/schema/: UPSTREAM.md
nifblend/: __init__.py  bench.py  preferences.py
nifblend/bridge/: __init__.py  animation_in.py  animation_out.py  animation_props.py  armature_in.py  armature_out.py  armature_props.py  cell_csv.py  cleanup.py  external_assets.py  lod.py  material_in.py  material_out.py  material_props.py  mesh_in.py  mesh_out.py  mesh_props.py  object_props.py  skin_in.py  skin_props.py  textures.py  utilities.py
nifblend/format/: __init__.py  base.py  primitives.py  starfield_mesh.py  versions.py
nifblend/io/: __init__.py  block_table.py  header.py  kf.py  reader.py  writer.py
nifblend/ops/: __init__.py  cleanup.py  export_batch.py  export_kf.py  export_nif.py  export_xedit_pas.py  games_fallout.py  games_morrowind.py  games_oblivion.py  games_skyrim.py  games_starfield.py  import_batch.py  import_cell.py  import_kf.py  import_nif.py  preview_lod.py  textures.py  utilities.py
nifblend/scripts/: __init__.py  blender_export.pas
nifblend/tests/: __init__.py  test_animation_in.py  test_animation_out.py  test_animation_props.py  test_armature_in.py  (+45 more)
scripts/: bench.py  run_tests.py
tests/: conftest.py  pytest.ini  ruff.toml
tools/: __init__.py
(+17 files in other folders)
